--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.3",
+    "husky": "^1.3.1",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9"
   }
